--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>Very Vague Vue App</title>
-    <link rel=icon type=image/png sizes=32x32 href=/img/favicon.png>
-    <link rel=icon type=image/png sizes=16x16 href=/img/favicon.png>
+    <title>Joshua Noises</title>
+    <link rel=icon type=image/png sizes=32x32 href=https://img.icons8.com/wired/344/low-volume.png>
+    <link rel=icon type=image/png sizes=16x16 href=https://img.icons8.com/wired/344/low-volume.png>
     <link rel=manifest href=/manifest.json>
     <meta name=theme-color content=#4DBA87>
     <meta name=apple-mobile-web-app-capable content=yes>
